# spectrum-rs

./: .editorconfig  Cargo.toml  README.md  result.txt
.github/workflows/: rust.yml
benches/: check_result.rs
files/: input.txt
src/: check_result.rs  io.rs  lib.rs  main.rs  spectrum.rs
