[package]
name = "spectrum"
version = "0.1.0"
authors = ["hrntsm <contact@hrntsm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3.4"
structopt = "0.3.21"

[[bench]]
name = "check_result"
harness = false